[package]
name = "keycast"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
hostname = "0.4.1"
mdns-sd = "0.15.1"
rand = "0.8"
rsa = "0.9.8"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
