[package]
name = "keycast"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
hostname = "0.4.1"
log = "0.4.28"
mdns-sd = "0.15.1"
rand = "0.8"
rsa = "0.9.8"
rustls = { version = "0.23.34", optional = true }
rustls-pki-types = { version = "1.13.0", features = ["std"], optional = true }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
x509-parser = { version = "0.18.0", optional = true }


[features]
rustls-verifier = ["dep:rustls", "dep:rustls-pki-types", "dep:x509-parser"]
