[package]
name = "keycast"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cryptoki = { version = "0.10.0", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true, features = ["pkcs8"] }
hex = "0.4.3"
hostname = "0.4.1"
log = "0.4.28"
mdns-sd = "0.15.1"
pkcs8 = "0.10.2"
rand = "0.8"
rcgen = { version = "0.14.5", features = ["pem"]}
reqwest = { version = "0.12.24", optional = true, default-features = false, features = ["rustls-tls"] }
rsa = { version = "0.9.8", optional = true }
rustls = { version = "0.23.34", optional = true, features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1.13.0", features = ["std"], optional = true }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sha2 = { version = "0.10.9", optional = true }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"]}
x509-parser = { version = "0.18.0", optional = true }

[dev-dependencies]
rocket = { version = "0.5.1", features = ["tls"]}

[features]
rustls-verifier = ["dep:rustls", "dep:rustls-pki-types", "dep:x509-parser"]
rustls-reqwest = ["rustls-verifier", "dep:reqwest"]
pkcs11 = ["rustls-verifier", "dep:cryptoki"]
ed25519 = ["dep:ed25519-dalek"]
rsa = ["dep:rsa"]
sha2 = ["dep:sha2"]
default = ["sha2", "rsa", "ed25519", "rustls-verifier", "rustls-reqwest"]
